:ambulance: Fix overflow - temporary solution

--- a/src/scss/layout/_canvas.scss
+++ b/src/scss/layout/_canvas.scss
@@ -4,6 +4,9 @@
   #canvas {
     position: absolute;
     display: grid;
+    //temp
+    overflow: hidden;
+
     background-color: variables.$bright;
     max-width: 1000px;
     max-height: 1000px;
